# CSAssignment2

./: .gitignore  ReadMe.txt
ConsoleApp/: Activity.java  ReadInfoFailException.java  UploadAsyncTask.java  UploadClient.java  WorkerThread.java
Linux/ConsoleApp/: ConsoleApp.cpp  Socket.cpp  Socket.h
Linux/UploadServer/: CMakeLists.txt  HttpServlet.cpp  HttpServletRequest.cpp  HttpServletRequest.hpp  HttpServletResponse.cpp  ServerSocket.cpp  Socket.cpp  Socket.h  Thread.cpp  UploadServer.cpp  UploadServerThread.cpp  UploadServerThread.hpp  UploadServlet.cpp  hackathon_ideas.txt
UploadServer/: Form.html  HttpServletRequest.java  HttpServletResponse.java  UploadServer.java  UploadServerThread.java  UploadServlet.java
